--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "tsc",
     "postinstall": "tsc",
     "prestart": "npm run build",
-    "start:dev": "env-cmd -f ./config/.env.dev ts-node src/index.ts",
+    "start:dev": "env-cmd -f ./config/.env.dev nodemon src/index.ts",
     "start:prod": "env-cmd -f ./config/.env.prod ts-node src/index.js"
   },
   "dependencies": {
@@ -16,10 +16,12 @@
     "axios": "^1.3.2",
     "cors": "^2.8.5",
     "express": "^4.18.2",
-    "multer": "^1.4.2",
+    "multer": "^1.4.4",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
+    "@taquito/signer": "^16.1.2",
+    "@taquito/taquito": "^16.1.2",
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
     "@types/node": "^18.11.19",
