--- a/package.json
+++ b/package.json
@@ -17,14 +17,20 @@
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "multer": "^1.4.4",
+    "qrcode": "^1.5.3",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@taquito/signer": "^16.1.2",
     "@taquito/taquito": "^16.1.2",
+    "@taquito/tzip16": "^16.1.2",
+    "@taquito/utils": "^16.1.2",
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
     "@types/node": "^18.11.19",
+    "@types/qrcode": "^1.5.0",
+    "dayjs": "^1.11.7",
+    "ejs": "^3.1.9",
     "env-cmd": "^10.1.0",
     "nodemon": "^2.0.20",
     "ts-node": "^10.9.1",
